--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "watch": "mix watch"
   },
   "dependencies": {
     "@popperjs/core": "2.10.2",
@@ -24,6 +25,7 @@
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "dropzone": "6.0.0-beta.1",
+    "npm-watch": "^0.11.0",
     "quill": "1.3.6",
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
